Made a scrolling behaviour on article's code to prevent text from overflowing

--- a/clientNuxt/assets/css/custom.css
+++ b/clientNuxt/assets/css/custom.css
@@ -50,8 +50,8 @@ body {
     text-decoration: none;
 }
 
-.articleContent blockquote {
-    display: inline;
+.articleContent blockquote,pre {
+    display: inline-block;
     @apply bg-gray-200;
     font-style: oblique;
 }
@@ -60,10 +60,19 @@ body {
 .articleContent pre.ql-syntax {
     border: 1px;
     border-radius: 1%;
-    @apply p-1;
+    @apply p-3;
     background-color: #23241f;
     color: #f8f8f2;
-    overflow: visible;
+    /* overflow: scroll; */
+    width: 100%;
+    height: auto;
+    border-color: unset;
+
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    /* Scrollbar */
+    /* scrollbar */
 
 }
 
